<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="np.info.suraj.app.phonebook.AddContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/user"
                    android:contentDescription="@string/user_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:layout_marginTop="10dp"
                        android:inputType="text" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_below="@+id/name_layout"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile" />

            <EditText
                android:id="@+id/home_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_below="@+id/mobile_number"
                android:layout_marginTop="10dp"
                android:hint="@string/home" />

            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_number"
                android:layout_marginTop="10dp"
                android:hint="@string/street_address" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/street"
                android:layout_marginTop="10dp"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:layout_marginTop="10dp"
                android:hint="@string/country" />

            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/country"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:hint="@string/about" />

            <Button
                android:id="@+id/add_btn"
                android:layout_below="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_contact" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>