<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="np.info.suraj.app.phonebook.EditContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/edit_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/edit_user_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/user"
                    android:contentDescription="@string/user_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/edit_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:layout_marginTop="10dp"
                        android:inputType="text" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_below="@+id/edit_name_layout"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile" />

            <EditText
                android:id="@+id/edit_home_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_below="@+id/edit_mobile_number"
                android:layout_marginTop="10dp"
                android:hint="@string/home" />

            <EditText
                android:id="@+id/edit_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_home_number"
                android:layout_marginTop="10dp"
                android:hint="@string/street_address" />

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_street"
                android:layout_marginTop="10dp"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/edit_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_city"
                android:layout_marginTop="10dp"
                android:hint="@string/country" />

            <EditText
                android:id="@+id/edit_about"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/edit_country"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:hint="@string/about" />

            <LinearLayout
                android:id="@+id/edit_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_about"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/edit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_contact" />

                <Button
                    android:id="@+id/edit_reset_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    
</RelativeLayout>
