<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="np.info.suraj.app.phonebook.ContactDetail">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/detail_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_user_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/user"
                android:contentDescription="@string/image_description" />

            <TextView
                android:id="@+id/detail_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_user_image"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/detail_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/detail_full_name"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/mobile"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/detail_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_home_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_mobile_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/home"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_home_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_street_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_home_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/street"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_city_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_street_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/city"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/detail_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_country_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_city_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/country"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_country_layout"
                android:layout_marginTop="10dp"
                android:paddingBottom="50dp"
                android:gravity="start"
                android:textSize="20sp" />
        </RelativeLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/editImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_menu_edit"/>

    <ImageButton
        android:id="@+id/deleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@android:drawable/ic_menu_delete"/>

</RelativeLayout>
